@@ -376,8 +376,9 @@ TOKEN : /* IDENTIFIERS - ADL */
 |
   < V_CHARACTER: "'"~["\\","\n","'"]"'" | <CHAR_REF> >
 |
-  < V_ISO8601_DURATION: ("-")? "P"((<DIG>)+["d","D"])?("T"((<DIG>)+["h","H"])?
-  ((<DIG>)+["m","M"])?((<DIG>)+["s","S"])?)?>
+  < V_ISO8601_DURATION: ("-")? "P"((<DIG>)+["m","M"])?((<DIG>)+["w","W"])?
+  ((<DIG>)+["d","D"])?("T"((<DIG>)+["h","H"])?((<DIG>)+["m","M"])?
+  ((<DIG>)+["s","S"])?)?>
 |
   < V_DATE: (["0"-"9"]){4} "-" ( "0"["1"-"9"] | "1"["0"-"2"] ) "-"
             ( "0"["1"-"9"] | ["1"-"2"]["0"-"9"]|"3"["0"-"1"] ) >
